02/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the beginnings of cut/copy/paste support for nodes in the tree view.

02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug where adding a DTD node was shown as an option for element
      nodes.
    * Updated the edit DTD node dialog

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added localized messages to the view. jsXe now supports views having their
      own localized messages.

01/30/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the goToLine() method to DefaultView to maintain the contract for
      DocumentView

11/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a rudamentary way to add a DOCTYPE node. You add one by right
      clicking on the document node in the tree and adding it like any other
      node. However, adding a doc type definition displays a dialog where
      users enter the name, public id and system id. Under the covers, the
      DOCTYPE is added to the document as text and the document is reparsed.
      This is done because the DOM doesn't allow editing of DOCTYPE nodes and
      thus jsXe's interface isn't able to support it at the moment. jsXe may
      support it in the future using this method though.

10/26/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Removed feature that when you type something it begins editing the
      current node. It would begin editing even if you typed menu shortcut or
      something.

06/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Set the name of components so that they can be used in test scripts

06/20/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Changed the text area for editing node values from a JEditorPane to a
      JTextArea and set the line wrap policy to false so that word wrapping
      doesn't occur. JEditorPane was wrapping lines very strangely.

06/16/2005  Ian Lewis <IanLewis@member.fsf.org>
